simple simulation done

--- a/p3/eecs478p3/Makefile
+++ b/p3/eecs478p3/Makefile
@@ -5,9 +5,11 @@
 ####################
 
 FILES =  truthTable.cpp circuit.cpp main.cpp
+SIM = truthTable.cpp circuit.cpp simulation.cpp
 
 all: 
 	g++ -O3 -Wall -lm -g -o project3 ${FILES}
+	g++ -O3 -Wall -lm -g -o sim $(SIM)
 
 backup:
 	cp -rf *.c *.h Makefile backup/*
