topological sorting done

--- a/p3/eecs478p3/Makefile
+++ b/p3/eecs478p3/Makefile
@@ -6,10 +6,12 @@
 
 FILES =  truthTable.cpp circuit.cpp main.cpp
 SIM = truthTable.cpp circuit.cpp simulation.cpp
+TOP = truthTable.cpp circuit.cpp topological.cpp
 
 all: 
 	g++ -O3 -Wall -lm -g -o project3 ${FILES}
 	g++ -O3 -Wall -lm -g -o sim $(SIM)
+	g++ -O3 -Wall -lm -g -o top $(TOP)
 
 backup:
 	cp -rf *.c *.h Makefile backup/*
